c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_lex/backslash.c
/* A single backslash is not a valid token. */
\